--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -18,6 +18,7 @@
   <div class="container" ng-controller="LunchCheckController">
     <h1>Lunch Checker</h1>
 
+    Empty itens (',,') would not be considered
     <div class="form-group">
       <input id="lunch-menu" type="text" placeholder="list comma separated dishes you usually have for lunch" class="form-control {{textBoxClass}}" ng-model="lunchItens">
     </div>
