--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Hello Coursera</h1>
+
+        <ul>
+          <li><a href="/module1-solution">Module 1 Solution</a></li>
+          <li><a href="/module2-solution">Module 2 Solution</a></li>
+        </ul>
     </body>
 </html>
